force-app/main/default/objects/Inventory_Snapshot__c/fields/Aged_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Aged_Bucket__c</fullName>
    <label>Aged Bucket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>