force-app/main/default/objects/Inventory_Snapshot__c/fields/Available_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Available_Inventory__c</fullName>
    <label>Available Inventory</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>