force-app/main/default/objects/Inventory_Snapshot__c/fields/Cannabis_Category__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Category__c</fullName>
    <label>Cannabis Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>