force-app/main/default/objects/Inventory_Snapshot__c/fields/Cannabis_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Ratio__c</fullName>
    <label>Cannabis Ratio</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>