force-app/main/default/objects/Inventory_Snapshot__c/fields/CDB__c.field-meta.xml
<CustomField>
    <fullName>CDB__c</fullName>
    <label>CDB (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>