force-app/main/default/objects/Inventory_Snapshot__c/fields/COA_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>COA_Expiration_Date__c</fullName>
    <label>COA Expiration Date</label>
    <type>Date</type>
</CustomField>