force-app/main/default/objects/Inventory_Snapshot__c/fields/COA_Issued_Date_New__c.field-meta.xml
<CustomField>
    <fullName>COA_Issued_Date_New__c</fullName>
    <label>COA Issued Date</label>
    <type>Date</type>
</CustomField>