force-app/main/default/objects/Inventory_Snapshot__c/fields/COA_Number_New__c.field-meta.xml
<CustomField>
    <fullName>COA_Number_New__c</fullName>
    <label>COA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>