force-app/main/default/objects/Inventory_Snapshot__c/fields/Cultivation_Type__c.field-meta.xml
<CustomField>
    <fullName>Cultivation_Type__c</fullName>
    <label>Cultivation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>