force-app/main/default/objects/Inventory_Snapshot__c/fields/Days_in_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Inventory__c</fullName>
    <label>Days in Inventory</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>