force-app/main/default/objects/Inventory_Snapshot__c/fields/Depart_Confirm_Date__c.field-meta.xml
<CustomField>
    <fullName>Depart_Confirm_Date__c</fullName>
    <label>Depart Confirm Date</label>
    <type>DateTime</type>
</CustomField>