force-app/main/default/objects/Inventory_Snapshot__c/fields/Elapsed_Days__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Days__c</fullName>
    <label>Elapsed Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>