force-app/main/default/objects/Inventory_Snapshot__c/fields/Ending_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Ending_Inventory__c</fullName>
    <description>Total Inventory at last day of month</description>
    <label>Ending Inventory</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>