force-app/main/default/objects/Inventory_Snapshot__c/fields/FG_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>FG_Product_Name__c</fullName>
    <label>FG Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>