force-app/main/default/objects/Inventory_Snapshot__c/fields/Harvest_Batch_Code__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Batch_Code__c</fullName>
    <label>Batch ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>