force-app/main/default/objects/Inventory_Snapshot__c/fields/Inventory_Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Gross_Weight__c</fullName>
    <label>IP Gross Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>