force-app/main/default/objects/Inventory_Snapshot__c/fields/Inventory_Hold_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Hold_Reason_Code__c</fullName>
    <inlineHelpText>Must select reason code when inventory is on hold</inlineHelpText>
    <label>IP Hold Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Inventory_Hold_Reason_Code</valueSetName>
    </valueSet>
</CustomField>