force-app/main/default/objects/Inventory_Snapshot__c/fields/Inventory_Last_Movement_date__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Last_Movement_date__c</fullName>
    <label>Inventory Last Movement date</label>
    <type>Date</type>
</CustomField>