force-app/main/default/objects/Inventory_Snapshot__c/fields/Inventory_Location__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Location__c</fullName>
    <label>Inventory Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>