force-app/main/default/objects/Inventory_Snapshot__c/fields/Inventory_Position__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Position__c</fullName>
    <description>IP Name</description>
    <label>Inventory Position</label>
    <length>30</length>
    <type>Text</type>
</CustomField>