force-app/main/default/objects/Inventory_Snapshot__c/fields/Inventory_Qty__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Qty__c</fullName>
    <label>Inventory Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>