force-app/main/default/objects/Inventory_Snapshot__c/fields/IP_Case_Qty__c.field-meta.xml
<CustomField>
    <fullName>IP_Case_Qty__c</fullName>
    <label>IP Case Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>