force-app/main/default/objects/Inventory_Snapshot__c/fields/IP_Dim_Weight__c.field-meta.xml
<CustomField>
    <fullName>IP_Dim_Weight__c</fullName>
    <label>IP Dim Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>