force-app/main/default/objects/Inventory_Snapshot__c/fields/License_Premise__c.field-meta.xml
<CustomField>
    <fullName>License_Premise__c</fullName>
    <label>License Premise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>