force-app/main/default/objects/Inventory_Snapshot__c/fields/Month_End_Period__c.field-meta.xml
<CustomField>
    <fullName>Month_End_Period__c</fullName>
    <defaultValue>IF( 
MONTH(TODAY())=12,
DATE(YEAR(TODAY())+1,1,1)-1, 
DATE(YEAR(TODAY()),MONTH(TODAY()) + 1,1) -1)</defaultValue>
    <label>Month End Period</label>
    <type>Date</type>
</CustomField>