force-app/main/default/objects/Inventory_Snapshot__c/fields/On_Hand_Value__c.field-meta.xml
<CustomField>
    <fullName>On_Hand_Value__c</fullName>
    <label>On Hand Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>