force-app/main/default/objects/Inventory_Snapshot__c/fields/Producer_Name__c.field-meta.xml
<CustomField>
    <fullName>Producer_Name__c</fullName>
    <label>Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>