force-app/main/default/objects/Inventory_Snapshot__c/fields/Purchase_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line_Item__c</fullName>
    <description>PO line item mapped from Receiving line item</description>
    <formula>Receiving_Line__r.Purchase_Order_Line__r.Name</formula>
    <inlineHelpText>PO line item from Receiving line item</inlineHelpText>
    <label>Purchase Order Line Item</label>
    <type>Text</type>
</CustomField>