force-app/main/default/objects/Inventory_Snapshot__c/fields/Quantity_Type__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Type__c</fullName>
    <label>Quantity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>