force-app/main/default/objects/Inventory_Snapshot__c/fields/Rack_Level__c.field-meta.xml
<CustomField>
    <fullName>Rack_Level__c</fullName>
    <label>Rack Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>