force-app/main/default/objects/Inventory_Snapshot__c/fields/Retail_Unit_Form_Factor__c.field-meta.xml
<CustomField>
    <fullName>Retail_Unit_Form_Factor__c</fullName>
    <label>Retail Unit Form Factor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>