force-app/main/default/objects/Inventory_Snapshot__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <label>Sales Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>