force-app/main/default/objects/Inventory_Snapshot__c/fields/Shipping_Manifest__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Manifest__c</fullName>
    <label>Shipping Manifest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>