force-app/main/default/objects/Inventory_Snapshot__c/fields/Shipping_Manifest_Line__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Manifest_Line__c</fullName>
    <label>Shipping Manifest Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>