force-app/main/default/objects/Inventory_Snapshot__c/fields/Shipping_Manifest_Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Manifest_Line_Status__c</fullName>
    <label>Shipping Manifest Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Shipment Complete</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>