force-app/main/default/objects/Inventory_Snapshot__c/fields/SM_LI_Qty_Received__c.field-meta.xml
<CustomField>
    <fullName>SM_LI_Qty_Received__c</fullName>
    <label>SM LI Qty Received</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>