force-app/main/default/objects/Inventory_Snapshot__c/fields/SRLB__c.field-meta.xml
<CustomField>
    <fullName>SRLB__c</fullName>
    <inlineHelpText>Storage Location, Rack, Level, Bin - Workflow to auto populate</inlineHelpText>
    <label>SRLB</label>
    <length>200</length>
    <type>Text</type>
</CustomField>