force-app/main/default/objects/Inventory_Snapshot__c/fields/Starting_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Starting_Inventory__c</fullName>
    <description>Total Inventory starting every month Day 1</description>
    <label>Starting Inventory</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>