force-app/main/default/objects/Inventory_Snapshot__c/fields/Stocking_UOM__c.field-meta.xml
<CustomField>
    <fullName>Stocking_UOM__c</fullName>
    <label>Stocking UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>