force-app/main/default/objects/Inventory_Snapshot__c/fields/Strain__c.field-meta.xml
<CustomField>
    <fullName>Strain__c</fullName>
    <label>Strain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>