force-app/main/default/objects/Inventory_Snapshot__c/fields/Strain_Type__c.field-meta.xml
<CustomField>
    <fullName>Strain_Type__c</fullName>
    <label>Strain Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>