force-app/main/default/objects/Inventory_Snapshot__c/fields/Terpene__c.field-meta.xml
<CustomField>
    <fullName>Terpene__c</fullName>
    <label>Terpene (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>