force-app/main/default/objects/Inventory_Snapshot__c/fields/THC_MG_G__c.field-meta.xml
<CustomField>
    <fullName>THC_MG_G__c</fullName>
    <label>THC (MG/G)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>