force-app/main/default/objects/Inventory_Snapshot__c/fields/Total_Days_in_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_in_Inventory__c</fullName>
    <label>Total Days in Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>