force-app/main/default/objects/Inventory_Snapshot__c/fields/Total_Product_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Volume__c</fullName>
    <label>IP Cubic Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>