force-app/main/default/objects/Inventory_Snapshot__c/fields/UID_New__c.field-meta.xml
<CustomField>
    <fullName>UID_New__c</fullName>
    <label>UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>